# warpkit

./: .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  README.md  compose.yml  figure1.py  figure2.py  figure3.xcf  figure4.py  notes.fdb_latexmk  notes.fls  notes.tex  pyproject.toml  setup.cfg  setup.py  simulation.py  test.py  unwrapper.py  warpprods_single.txt
.github/workflows/: build.yml  test.txt
cmake_aux/: FindJulia.cmake
conda/: meta.yaml  warpkit-conda-install.sh
experiments/: __init__.py  controlled_head_motion.md  controlled_head_motion_2.md  fmaps_from_data.py
figures/: figure1.py  figure1.xcf  figure2.py  figure3.xcf  figure4.py
include/: itkModifiedInvertDisplacementFieldImageFilter.h  romeo.h  utilities.h  warps.h
include/itk/: itkModifiedInvertDisplacementFieldImageFilter.hxx
include/romeo/: README.md  algorithm.h  priority_queue.h  romeo.h  seed.h  unwrap.h  utility.h  volume_view.h  voxel_quality.h  weights.h
mosaic/: unwrap.py  unwrapper.py  utilities.py
notes/: ROMEO_port_plan.md
packaging/pyinstaller/: build_bundle.py  bundle_README.md  warpkit.spec
packaging/pyinstaller/hooks/: hook-warpkit.py
packaging/pyinstaller/launchers/: wk-apply-warp.py  wk-compute-fieldmap.py  wk-compute-jacobian.py  wk-convert-fieldmap.py  wk-convert-warp.py  wk-medic.py  wk-unwrap-phase.py
scripts/: check-gitmoji.sh  regen-stub.sh
simulations/: simulation2.py
src/: mosaic.cpp  romeo  romeo.c  warpkit.cpp
tests/: __init__.py  conftest.py  controlled_head_motion.md  fmaps_from_data.py  rigid_body_align.py  test_concurrency.py  test_distortion.py  test_julia.py  test_model.py  test_orientation.py  test_romeo.py  test_scripts.py  test_unwrap.py  test_utilities.py  test_version.py  test_warpkit.py  topup_wrapper.py
tests/data/: download_bids_testdata.sh
tests/data/test_data/: sub-a01_task-rest_acq-tr1800_echo-1_part-mag_bold.json  sub-a01_task-rest_acq-tr1800_echo-1_part-phase_bold.json  sub-a01_task-rest_acq-tr1800_echo-2_part-mag_bold.json  sub-a01_task-rest_acq-tr1800_echo-2_part-phase_bold.json  sub-a01_task-rest_acq-tr1800_echo-3_part-mag_bold.json  sub-a01_task-rest_acq-tr1800_echo-3_part-phase_bold.json
warpkit/: __init__.py  api.py  concurrency.py  distortion.py  julia.py  model.py  unwrap.py  utilities.py  warpkit_cpp.pyi
warpkit/scripts/: __init__.py  _cli.py  _metadata.py  _outputs.py  _warp_io.py  apply_warp.py  compute_fieldmap.py  compute_jacobian.py  convert_fieldmap.py  convert_warp.py  extract_field_from_maps.py  medic.py  unwrap_phase.py
