[project]
name = "warpkit"
description = "A python library for neuroimaging transformations"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Andrew Van", email = "vanandrew@wustl.edu" }]
keywords = ["neuroimaging"]
classifiers = ["Programming Language :: Python :: 3"]
urls = { github = "https://github.com/vanandrew/warpkit" }
version = "0.1.1"
dynamic = ["scripts"]
dependencies = [
  "nibabel >= 4.0.2",
  "numpy >= 1.23.3",
  "scikit-image >= 0.20.0",
  "scipy >= 1.8.1",
  "transforms3d >= 0.4.1",
  "indexed-gzip >= 1.7.0",
]

[dependency-groups]
dev = [
  "coverage[toml] >= 5.5",
  "pre-commit >= 3.6.0",
  "pybids >= 0.15.1",
  "pytest >= 7.2.2",
]

[build-system]
requires = ["setuptools", "wheel", "cmake >= 3.24", "cmake-build-extension >= 0.5.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["warpkit/build-tmp*"]

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort. Matches the old toolchain scope.
# Consider adding "UP" (pyupgrade) and "B" (bugbear) in a follow-up.
select = ["E", "W", "F", "I"]
# E203: whitespace before ':' — conflicts with the formatter on slices.
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.pyright]
include = ["warpkit"]
exclude = ["**/__pycache__", "warpkit/build-tmp*", "tests/data", ".venv", "**/node_modules", "**/.*"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
# The CMake extension (warpkit.warpkit_cpp) has no .pyi stubs yet.
reportMissingImports = "warning"
reportMissingModuleSource = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
command_line = "-m pytest"

[tool.coverage.report]
omit = ["tests/*"]

[tool.pylint.main]
disable = [
  "line-too-long",
  "invalid-name",
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-many-arguments",
  "too-many-statements",
  "too-many-locals",
  "wildcard-import",
  "unused-argument",
  "unused-wildcard-import",
  "import-outside-toplevel",
  "attribute-defined-outside-init",
  "dangerous-default-value",
]

[tool.cibuildwheel]
skip = "*musllinux*"
build-frontend = "build"

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["universal2"]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
before-build = ["pip install delocate==0.10.6"]
