[project]
name = "warpkit"
description = "A python library for neuroimaging transformations"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Andrew Van", email = "vanandrew@wustl.edu" }]
keywords = ["neuroimaging"]
classifiers = ["Programming Language :: Python :: 3"]
urls = { github = "https://github.com/vanandrew/warpkit" }
dynamic = ["version", "scripts"]
dependencies = [
  "nibabel >= 4.0.2",
  "numpy >= 1.23.3",
  "scikit-image >= 0.20.0",
  "scipy >= 1.8.1",
  "transforms3d >= 0.4.1",
  "indexed-gzip >= 1.7.0",
]

[dependency-groups]
dev = [
  "coverage[toml] >= 5.5",
  "pre-commit >= 3.6.0",
  "pybids >= 0.15.1",
  "pytest >= 7.2.2",
]

[build-system]
requires = [
  "setuptools >= 77.0",
  "setuptools-scm >= 8.0",
  "wheel >= 0.45",
  "cmake >= 3.24",
  "cmake-build-extension >= 0.6.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools_scm]
fallback_version = "0.0.0"
version_file = "warpkit/_version.py"

# ── Ruff (linter + formatter) ────────────────────────────────────────
[tool.ruff]
target-version = "py311" # minimum supported Python version
line-length = 88         # matches Black's default
src = ["warpkit"]        # treat warpkit/ as the source root for import sorting
extend-exclude = ["warpkit/build-tmp*"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "N",   # pep8-naming
    "UP",  # pyupgrade (modernize syntax)
    "B",   # flake8-bugbear (common pitfalls)
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by the formatter, not the linter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true # format code blocks inside docstrings

[tool.pyright]
include = ["warpkit"]
exclude = ["**/__pycache__", "warpkit/build-tmp*", "tests/data", ".venv", "**/node_modules", "**/.*"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
# The CMake extension (warpkit.warpkit_cpp) has no .pyi stubs yet.
reportMissingImports = "warning"
reportMissingModuleSource = "none"
# Pre-existing numpy/nibabel typing debt in warpkit/{unwrap,utilities,distortion}.py
# that predates the C++ port. Demoted to warnings so the hook doesn't block;
# revisit in a follow-up PR scoped just to typing fixes.
reportArgumentType = "warning"
reportAssignmentType = "warning"
reportReturnType = "warning"
reportGeneralTypeIssues = "warning"
reportAttributeAccessIssue = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
command_line = "-m pytest"

[tool.coverage.report]
omit = ["tests/*"]

[tool.pylint.main]
disable = [
  "line-too-long",
  "invalid-name",
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-many-arguments",
  "too-many-statements",
  "too-many-locals",
  "wildcard-import",
  "unused-argument",
  "unused-wildcard-import",
  "import-outside-toplevel",
  "attribute-defined-outside-init",
  "dangerous-default-value",
]

[tool.cibuildwheel]
skip = "*musllinux*"
build-frontend = "build"

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["universal2"]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
before-build = ["pip install delocate==0.10.6"]
